Add some default stuff

--- a/src/index.jade
+++ b/src/index.jade
@@ -4,4 +4,6 @@ html
     include includes/header
   body
     include includes/nav
+    .container
+      h1 Static Site
     include includes/footer
