--- a/src/includes/nav.jade
+++ b/src/includes/nav.jade
@@ -1,4 +1,4 @@
-nav.navbar
+nav.navbar.navbar-default
   .container
     .navbar-header
       button.navbar-toggle.collapsed(type="button", data-toggle="collapse", data-target="#navbar", aria-expanded="false", aria-controls="navbar")
@@ -9,6 +9,9 @@ nav.navbar
       a.navbar-brand(href="#") Project Name
     #navbar.collapse.navbar-collapse
       ul.nav.navbar-nav
-        li:a(href="#") Home
-        li:a(href="#") About
-        li:a(href="#") Contact
+        li
+          a(href="#") Home
+        li
+          a(href="#") About
+        li
+          a(href="#") Contact
