--- a/src/includes/nav.jade
+++ b/src/includes/nav.jade
@@ -9,9 +9,6 @@ nav.navbar.navbar-default
       a.navbar-brand(href="#") Project Name
     #navbar.collapse.navbar-collapse
       ul.nav.navbar-nav
-        li
-          a(href="#") Home
-        li
-          a(href="#") About
-        li
-          a(href="#") Contact
+        li: a(href="#") Home
+        li: a(href="#") About
+        li: a(href="#") Contact
