Add gulp, remove grunt

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,4 +1,9 @@
-@import "variables";
-@import "../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap";
-@import "mixins";
+//@import "variables";
+//@import "../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap";
+//@import "mixins";
 
+@import "../../bower_components/bootstrap/scss/bootstrap.scss";
+
+body {
+  background: red;
+}
