--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,9 +1,3 @@
-//@import "variables";
-//@import "../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap";
-//@import "mixins";
+@import "variables";
 
 @import "../../bower_components/bootstrap/scss/bootstrap.scss";
-
-body {
-  background: red;
-}
