--- a/src/handlebars/layout.handlebars
+++ b/src/handlebars/layout.handlebars
@@ -5,16 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     {{#block "styles"}}
-    <link rel="stylesheet" href="dist/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     {{/block}}
 </head>
 <body>
-<div class="container">
-    {{#block "page-content"}}
-    {{/block}}
+<div class="page-wrapper">
+  {{> nav}}
+  <div class="container">
+
+      {{#block "page-content"}}
+      {{/block}}
+  </div>
 </div>
+{{> footer}}
 {{#block "scripts"}}
-<script src="dist/js/app.js"></script>
+<script src="js/app.js"></script>
 {{/block}}
 </body>
 </html>
