--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -43,8 +43,8 @@ $brand-danger:              #d9534f !default;
 //
 // Quickly modify global styling by enabling or disabling optional features.
 
-$enable-flex:               false !default;
-$enable-rounded:            true !default;
+$enable-flex:               true;
+$enable-rounded:            false;
 $enable-shadows:            false !default;
 $enable-gradients:          false !default;
 $enable-transitions:        false !default;
