--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,3 +1,18 @@
 @import "variables";
 
 @import "../../bower_components/bootstrap/scss/bootstrap.scss";
+
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.page-wrapper {
+  flex: 1;
+}
+
+footer {
+  background: $gray-dark;
+  color: #fff;
+}
