dummy data tweaks

--- a/src/handlebars/views/about.handlebars
+++ b/src/handlebars/views/about.handlebars
@@ -6,10 +6,10 @@
     {{#each dummyData}}
       <div class="col-sm-4">
         <div class="card">
-            <img class="card-img-top img-fluid" src="{{imageUrl}}">
+            <img class="card-img-top img-fluid" src="{{profile_img}}">
             <div class="card-block">
               <h2 class="h4">{{name}}</h2>
-              <p>{{ bio }}</p>
+              <p>{{ profile_bio}}</p>
             </div>
         </div>
       </div>
