--- a/src/templates/views/about.handlebars
+++ b/src/templates/views/about.handlebars
@@ -3,7 +3,7 @@
     <h1 class="m-b-2">About Us</h1>
 
     <div class="row">
-    {{#each dummyData}}
+    {{#each aboutData}}
       <div class="col-sm-4">
         <div class="card">
             <img class="card-img-top img-fluid" src="{{profile_img}}">
