--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,6 +1,7 @@
 @import "variables";
 
-@import "../../bower_components/bootstrap/scss/bootstrap.scss";
+@import "../../bower_components/css-utilities/utilities";
+@import "../../bower_components/bootstrap-sass/assets/stylesheets/_bootstrap.scss";
 
 body {
   display: flex;
