Add Vue js and VueStrap

--- a/src/templates/layout.handlebars
+++ b/src/templates/layout.handlebars
@@ -12,9 +12,10 @@
 <div class="page-wrapper">
   {{> nav}}
   <div class="container">
-
-      {{#block "page-content"}}
-      {{/block}}
+      <div id="app">
+        {{#block "page-content"}}
+        {{/block}}
+      </div>
   </div>
 </div>
 {{> footer}}
